Bug 1335745 - Guard against a null rootPresContext. r=tnikkel

With WebRender enabled, the DidComposite notification message can be delayed
because of the extra indirection of the WR Render thread. This can result
in the DidComposite notification arriving for a popup window after it has already
been put into the bfcache and no longer has a root prescontext. This results in
an intermittent crash or assertion failure during crashtests. A null guard here
should avoid the problem.

MozReview-Commit-ID: A1U82tStFsQ